[package]
name = "jonsbo_th"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
hidapi = "2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Make the binary weight nothing
strip = true        # Automatically strip symbols
panic = "abort"     # Remove stack unwinding code
